refactor(danmaku): streamline subtitle timing settings